--- a/strand/iOS/Strand/Strand/DFCollectionViewTableViewCell.xib
+++ b/strand/iOS/Strand/Strand/DFCollectionViewTableViewCell.xib
@@ -7,17 +7,17 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="116" id="KGk-i7-Jjw" customClass="DFCollectionViewTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="116"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="78" id="KGk-i7-Jjw" customClass="DFCollectionViewTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="78"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="115"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="AOi-j5-d6P">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="115"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="fo0-Ha-JPa">
-                            <size key="itemSize" width="50" height="50"/>
+                    <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="AOi-j5-d6P">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="77"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.5" minimumInteritemSpacing="0.5" id="fo0-Ha-JPa">
+                            <size key="itemSize" width="79" height="79"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -25,6 +25,12 @@
                         <cells/>
                     </collectionView>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="AOi-j5-d6P" secondAttribute="bottom" id="5kL-j6-93c"/>
+                    <constraint firstItem="AOi-j5-d6P" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="HS1-33-fSr"/>
+                    <constraint firstAttribute="trailing" secondItem="AOi-j5-d6P" secondAttribute="trailing" id="U5i-jD-xAV"/>
+                    <constraint firstItem="AOi-j5-d6P" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="izx-zv-lFr"/>
+                </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="collectionView" destination="AOi-j5-d6P" id="5uw-I6-WHx"/>
