--- a/strand/iOS/Strand/Strand/DFSwapTableViewCell.xib
+++ b/strand/iOS/Strand/Strand/DFSwapTableViewCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -31,16 +32,16 @@
                         <rect key="frame" x="15" y="12" width="45" height="45"/>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TP8-fd-0ug">
-                        <rect key="frame" x="70" y="18" width="182" height="33"/>
+                        <rect key="frame" x="70" y="18" width="183" height="33"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="999" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DX7-Ic-BZM">
-                                <rect key="frame" x="0.0" y="0.0" width="182" height="16"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="999" text="Title" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="1000" translatesAutoresizingMaskIntoConstraints="NO" id="DX7-Ic-BZM">
+                                <rect key="frame" x="0.0" y="0.0" width="183" height="16"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="999" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4CT-1K-HwU">
-                                <rect key="frame" x="0.0" y="19" width="182" height="14"/>
+                                <rect key="frame" x="0.0" y="19" width="183" height="14"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
@@ -58,10 +59,9 @@
                         </constraints>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tdG-RI-gL3">
-                        <rect key="frame" x="260" y="12" width="45" height="45"/>
+                        <rect key="frame" x="261" y="12" width="44" height="44"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="45" id="0eJ-62-DDG"/>
-                            <constraint firstAttribute="height" constant="45" id="fYy-kE-Yio"/>
+                            <constraint firstAttribute="width" secondItem="tdG-RI-gL3" secondAttribute="height" multiplier="1:1" id="0Uf-Le-muw"/>
                         </constraints>
                     </imageView>
                 </subviews>
@@ -70,12 +70,13 @@
                     <constraint firstItem="Vcm-E6-ho6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="7HS-Su-lfg"/>
                     <constraint firstAttribute="trailing" secondItem="tdG-RI-gL3" secondAttribute="trailing" constant="15" id="CCL-1w-Wg6"/>
                     <constraint firstItem="RXS-hD-KOp" firstAttribute="height" secondItem="Vcm-E6-ho6" secondAttribute="height" id="Tb6-uU-h3Y"/>
+                    <constraint firstItem="tdG-RI-gL3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="U2t-BV-RuB"/>
                     <constraint firstItem="RXS-hD-KOp" firstAttribute="centerY" secondItem="Vcm-E6-ho6" secondAttribute="centerY" id="WC7-qB-Vew"/>
                     <constraint firstItem="RXS-hD-KOp" firstAttribute="centerX" secondItem="Vcm-E6-ho6" secondAttribute="centerX" id="ZxE-SH-pQF"/>
                     <constraint firstItem="TP8-fd-0ug" firstAttribute="leading" secondItem="Vcm-E6-ho6" secondAttribute="trailing" constant="10" id="cgz-wm-2Eu"/>
                     <constraint firstAttribute="centerY" secondItem="Vcm-E6-ho6" secondAttribute="centerY" id="dEt-jO-uie"/>
                     <constraint firstItem="RXS-hD-KOp" firstAttribute="width" secondItem="Vcm-E6-ho6" secondAttribute="width" id="kec-kY-QcT"/>
-                    <constraint firstAttribute="centerY" secondItem="tdG-RI-gL3" secondAttribute="centerY" id="snz-7J-v4T"/>
+                    <constraint firstAttribute="bottom" secondItem="tdG-RI-gL3" secondAttribute="bottom" constant="12" id="lZV-cg-kVE"/>
                     <constraint firstItem="tdG-RI-gL3" firstAttribute="leading" secondItem="TP8-fd-0ug" secondAttribute="trailing" constant="8" id="tu6-eN-O17"/>
                 </constraints>
             </tableViewCellContentView>
@@ -86,7 +87,7 @@
                 <outlet property="profileReplacementImageView" destination="RXS-hD-KOp" id="dCg-qB-GQH"/>
                 <outlet property="subTitleLabel" destination="4CT-1K-HwU" id="WzC-Tr-5RM"/>
             </connections>
-            <point key="canvasLocation" x="531" y="367.5"/>
+            <point key="canvasLocation" x="459" y="366.5"/>
         </tableViewCell>
     </objects>
 </document>
