--- a/strand/iOS/Strand/Strand/DFSwapViewController.xib
+++ b/strand/iOS/Strand/Strand/DFSwapViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
@@ -32,6 +32,7 @@
                 <constraint firstAttribute="bottom" secondItem="nxo-cd-cP8" secondAttribute="bottom" id="awS-35-3Hy"/>
                 <constraint firstItem="nxo-cd-cP8" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="iAL-4G-djU"/>
             </constraints>
+            <point key="canvasLocation" x="365" y="487"/>
         </view>
     </objects>
 </document>
