New suggestion unit

--- a/strand/iOS/Strand/Strand/DFSwapSuggestionTableViewCell.xib
+++ b/strand/iOS/Strand/Strand/DFSwapSuggestionTableViewCell.xib
@@ -3,24 +3,26 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="69" id="dsK-5E-P9S" customClass="DFSwapSuggestionTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="69"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="222" id="dsK-5E-P9S" customClass="DFSwapSuggestionTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="222"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dsK-5E-P9S" id="pZP-qj-aKZ">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HXc-tQ-T0d" customClass="DFProfileStackView">
-                        <rect key="frame" x="15" y="12" width="45" height="45"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cec-qq-DwM" userLabel="Photo Preview Image View">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="181"/>
+                    </imageView>
+                    <view hidden="YES" contentMode="scaleToFill" horizontalHuggingPriority="999" translatesAutoresizingMaskIntoConstraints="NO" id="HXc-tQ-T0d" customClass="DFProfileStackView">
+                        <rect key="frame" x="15" y="61" width="25" height="25"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="45" id="HvS-B7-2ij"/>
-                            <constraint firstAttribute="width" constant="45" id="KHC-uC-jjP"/>
+                            <constraint firstAttribute="height" constant="25" id="HvS-B7-2ij"/>
+                            <constraint firstAttribute="width" constant="25" id="KHC-uC-jjP"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="profilePhotoWidth">
@@ -28,26 +30,29 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iq8-wG-ntb">
-                        <rect key="frame" x="15" y="12" width="45" height="45"/>
+                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iq8-wG-ntb" userLabel="Replacement profile image view">
+                        <rect key="frame" x="15" y="61" width="25" height="25"/>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wel-pE-hM2">
-                        <rect key="frame" x="70" y="18" width="183" height="33"/>
+                        <rect key="frame" x="15" y="15" width="290" height="42"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="999" text="Title" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="1000" translatesAutoresizingMaskIntoConstraints="NO" id="59k-Fp-eqN">
-                                <rect key="frame" x="0.0" y="0.0" width="183" height="16"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <rect key="frame" x="0.0" y="0.0" width="290" height="22"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
+                                <color key="shadowColor" white="0.0" alpha="0.5" colorSpace="calibratedWhite"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="999" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B3N-MB-F6A">
-                                <rect key="frame" x="0.0" y="19" width="183" height="14"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="0.0" y="25" width="290" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
+                                <color key="shadowColor" white="0.0" alpha="0.5" colorSpace="calibratedWhite"/>
+                                <size key="shadowOffset" width="0.0" height="1"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="B3N-MB-F6A" firstAttribute="leading" secondItem="wel-pE-hM2" secondAttribute="leading" id="1JF-jw-8Cf"/>
                             <constraint firstItem="59k-Fp-eqN" firstAttribute="top" secondItem="wel-pE-hM2" secondAttribute="top" id="JJ7-fq-kE0"/>
@@ -58,36 +63,103 @@
                             <constraint firstAttribute="trailing" secondItem="59k-Fp-eqN" secondAttribute="trailing" id="vp6-1c-aY0"/>
                         </constraints>
                     </view>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cec-qq-DwM">
-                        <rect key="frame" x="261" y="12" width="44" height="44"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gDU-vm-gRh" userLabel="ButtonBar">
+                        <rect key="frame" x="0.0" y="181" width="320" height="40"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VuU-a6-XCb">
+                                <rect key="frame" x="161" y="11" width="159" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2" maxY="0.0"/>
+                                <state key="normal" title="Skip" image="Assets/Icons/SkipButtonIcon.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="skipButtonPressed:" destination="dsK-5E-P9S" eventType="touchUpInside" id="3ha-ng-uhN"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fEi-YX-4Rq">
+                                <rect key="frame" x="0.0" y="11" width="159" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2" maxY="0.0"/>
+                                <state key="normal" title="Request" image="Assets/Icons/RequestButtonIcon.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="requestButtonPressed:" destination="dsK-5E-P9S" eventType="touchUpInside" id="3lK-bF-Oa3"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="cec-qq-DwM" secondAttribute="height" multiplier="1:1" id="lHe-OE-5MT"/>
+                            <constraint firstAttribute="centerY" secondItem="VuU-a6-XCb" secondAttribute="centerY" id="0m1-hE-WDL"/>
+                            <constraint firstAttribute="centerY" secondItem="fEi-YX-4Rq" secondAttribute="centerY" id="aZS-dw-9fi"/>
+                            <constraint firstAttribute="trailing" secondItem="VuU-a6-XCb" secondAttribute="trailing" id="dtl-lF-fjY"/>
+                            <constraint firstItem="VuU-a6-XCb" firstAttribute="leading" secondItem="fEi-YX-4Rq" secondAttribute="trailing" constant="2" id="g0r-wa-bRt"/>
+                            <constraint firstItem="fEi-YX-4Rq" firstAttribute="leading" secondItem="gDU-vm-gRh" secondAttribute="leading" id="jHP-pd-Dsy"/>
+                            <constraint firstAttribute="height" constant="40" id="oPw-3d-ciZ"/>
+                            <constraint firstItem="fEi-YX-4Rq" firstAttribute="width" secondItem="VuU-a6-XCb" secondAttribute="width" id="xsH-iO-py9"/>
                         </constraints>
-                    </imageView>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eSz-bL-5gV" customClass="SAMGradientView">
+                        <rect key="frame" x="0.0" y="130" width="320" height="51"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Get photos from friends" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DYa-5Z-XUJ">
+                                <rect key="frame" x="89" y="21" width="143" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="0.64000000000000001" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="DYa-5Z-XUJ" secondAttribute="centerX" id="MBy-WE-3d0"/>
+                            <constraint firstAttribute="bottom" secondItem="DYa-5Z-XUJ" secondAttribute="bottom" constant="14" id="jCB-Ox-TlA"/>
+                            <constraint firstAttribute="height" constant="51" id="yFF-WE-tNG"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="iq8-wG-ntb" firstAttribute="centerX" secondItem="HXc-tQ-T0d" secondAttribute="centerX" id="7mk-Ml-xXX"/>
-                    <constraint firstAttribute="centerY" secondItem="HXc-tQ-T0d" secondAttribute="centerY" id="C8L-Su-c9L"/>
-                    <constraint firstItem="iq8-wG-ntb" firstAttribute="height" secondItem="HXc-tQ-T0d" secondAttribute="height" id="CMc-Rf-tJ2"/>
-                    <constraint firstItem="iq8-wG-ntb" firstAttribute="centerY" secondItem="HXc-tQ-T0d" secondAttribute="centerY" id="DDS-Cs-Kxv"/>
-                    <constraint firstItem="HXc-tQ-T0d" firstAttribute="centerY" secondItem="wel-pE-hM2" secondAttribute="centerY" id="HoT-uJ-MbB"/>
-                    <constraint firstItem="HXc-tQ-T0d" firstAttribute="leading" secondItem="pZP-qj-aKZ" secondAttribute="leading" constant="15" id="IVD-qn-BZE"/>
-                    <constraint firstAttribute="trailing" secondItem="cec-qq-DwM" secondAttribute="trailing" constant="15" id="Qcy-pn-4eF"/>
-                    <constraint firstItem="iq8-wG-ntb" firstAttribute="width" secondItem="HXc-tQ-T0d" secondAttribute="width" id="UAm-Vg-HBd"/>
-                    <constraint firstItem="wel-pE-hM2" firstAttribute="leading" secondItem="HXc-tQ-T0d" secondAttribute="trailing" constant="10" id="YiN-O1-ER5"/>
-                    <constraint firstItem="cec-qq-DwM" firstAttribute="leading" secondItem="wel-pE-hM2" secondAttribute="trailing" constant="8" id="b8R-Ii-Mrp"/>
-                    <constraint firstAttribute="bottom" secondItem="cec-qq-DwM" secondAttribute="bottom" constant="12" id="heh-1f-Za3"/>
-                    <constraint firstItem="cec-qq-DwM" firstAttribute="top" secondItem="pZP-qj-aKZ" secondAttribute="top" constant="12" id="hl6-KA-Qpb"/>
+                    <constraint firstItem="gDU-vm-gRh" firstAttribute="top" secondItem="eSz-bL-5gV" secondAttribute="bottom" id="2At-rA-H4G"/>
+                    <constraint firstItem="iq8-wG-ntb" firstAttribute="bottom" secondItem="HXc-tQ-T0d" secondAttribute="bottom" id="BAe-YR-8IQ"/>
+                    <constraint firstItem="iq8-wG-ntb" firstAttribute="trailing" secondItem="HXc-tQ-T0d" secondAttribute="trailing" id="Gcu-6u-mM7"/>
+                    <constraint firstItem="eSz-bL-5gV" firstAttribute="leading" secondItem="pZP-qj-aKZ" secondAttribute="leading" id="NTs-oI-erW"/>
+                    <constraint firstAttribute="trailing" secondItem="cec-qq-DwM" secondAttribute="trailing" id="Qcy-pn-4eF"/>
+                    <constraint firstItem="gDU-vm-gRh" firstAttribute="leading" secondItem="pZP-qj-aKZ" secondAttribute="leading" id="TSi-ap-y1y"/>
+                    <constraint firstItem="wel-pE-hM2" firstAttribute="leading" secondItem="pZP-qj-aKZ" secondAttribute="leading" constant="15" id="V91-a7-7Cd"/>
+                    <constraint firstItem="iq8-wG-ntb" firstAttribute="leading" secondItem="HXc-tQ-T0d" secondAttribute="leading" id="WNi-hO-fjC"/>
+                    <constraint firstItem="HXc-tQ-T0d" firstAttribute="top" secondItem="wel-pE-hM2" secondAttribute="bottom" constant="4" id="X9H-cX-mdk"/>
+                    <constraint firstAttribute="trailing" secondItem="gDU-vm-gRh" secondAttribute="trailing" id="dOf-do-qHw"/>
+                    <constraint firstItem="wel-pE-hM2" firstAttribute="top" secondItem="pZP-qj-aKZ" secondAttribute="top" constant="15" id="eDu-R4-KiN"/>
+                    <constraint firstAttribute="bottom" secondItem="gDU-vm-gRh" secondAttribute="bottom" id="gGp-QL-ozr"/>
+                    <constraint firstAttribute="trailing" secondItem="eSz-bL-5gV" secondAttribute="trailing" id="gvl-cR-CMm"/>
+                    <constraint firstItem="cec-qq-DwM" firstAttribute="top" secondItem="pZP-qj-aKZ" secondAttribute="top" id="hl6-KA-Qpb"/>
+                    <constraint firstItem="cec-qq-DwM" firstAttribute="leading" secondItem="pZP-qj-aKZ" secondAttribute="leading" id="itd-a4-qKg"/>
+                    <constraint firstAttribute="trailing" secondItem="wel-pE-hM2" secondAttribute="trailing" constant="15" id="pbn-pu-JUx"/>
+                    <constraint firstItem="HXc-tQ-T0d" firstAttribute="leading" secondItem="pZP-qj-aKZ" secondAttribute="leading" constant="15" id="qSU-pC-k61"/>
+                    <constraint firstItem="gDU-vm-gRh" firstAttribute="top" secondItem="cec-qq-DwM" secondAttribute="bottom" id="vm5-1B-bFh"/>
+                    <constraint firstItem="HXc-tQ-T0d" firstAttribute="top" secondItem="iq8-wG-ntb" secondAttribute="top" id="wXX-Xk-pf3"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" red="0.37647058823529411" green="0.37647058823529411" blue="0.37647058823529411" alpha="1" colorSpace="calibratedRGB"/>
             <connections>
-                <outlet property="peopleLabel" destination="59k-Fp-eqN" id="0bc-wn-B0M"/>
+                <outlet property="buttonBar" destination="gDU-vm-gRh" id="p71-20-8L2"/>
+                <outlet property="explanationLabel" destination="DYa-5Z-XUJ" id="tfi-XR-7I3"/>
+                <outlet property="gradientView" destination="eSz-bL-5gV" id="Nt6-4P-8BC"/>
                 <outlet property="previewImageView" destination="cec-qq-DwM" id="esV-xB-M8C"/>
                 <outlet property="profilePhotoStackView" destination="HXc-tQ-T0d" id="7xC-rK-NiF"/>
                 <outlet property="profileReplacementImageView" destination="iq8-wG-ntb" id="vRA-am-zdG"/>
+                <outlet property="requestButton" destination="fEi-YX-4Rq" id="lB6-vA-vc6"/>
+                <outlet property="skipButton" destination="VuU-a6-XCb" id="ZLo-O8-Vtu"/>
                 <outlet property="subTitleLabel" destination="B3N-MB-F6A" id="6XL-cW-oCk"/>
+                <outlet property="topLabel" destination="59k-Fp-eqN" id="Dh3-EU-yWU"/>
             </connections>
-            <point key="canvasLocation" x="452" y="385.5"/>
+            <point key="canvasLocation" x="558" y="498"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="Assets/Icons/RequestButtonIcon.png" width="16" height="16"/>
+        <image name="Assets/Icons/SkipButtonIcon.png" width="16" height="16"/>
+    </resources>
 </document>
