--- a/strand/iOS/Strand/Strand/DFSwapTableViewCell.xib
+++ b/strand/iOS/Strand/Strand/DFSwapTableViewCell.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
@@ -81,11 +80,11 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="peopleLabel" destination="DX7-Ic-BZM" id="njX-bZ-T0n"/>
                 <outlet property="previewImageView" destination="tdG-RI-gL3" id="UQS-em-gho"/>
                 <outlet property="profilePhotoStackView" destination="Vcm-E6-ho6" id="DD9-Su-RCU"/>
                 <outlet property="profileReplacementImageView" destination="RXS-hD-KOp" id="dCg-qB-GQH"/>
                 <outlet property="subTitleLabel" destination="4CT-1K-HwU" id="WzC-Tr-5RM"/>
+                <outlet property="topLabel" destination="DX7-Ic-BZM" id="usa-1t-Wtx"/>
             </connections>
             <point key="canvasLocation" x="459" y="366.5"/>
         </tableViewCell>
