Improve request unit at top of notifications

--- a/strand/iOS/Strand/Strand/DFProfileWithContextView.xib
+++ b/strand/iOS/Strand/Strand/DFProfileWithContextView.xib
@@ -27,6 +27,7 @@
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
+                            <size key="shadowOffset" width="0.0" height="1"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yky-Qy-Ffh">
                             <rect key="frame" x="0.0" y="16" width="33" height="14"/>
