--- a/strand/iOS/Strand/Strand/DFSuggestionViewController.xib
+++ b/strand/iOS/Strand/Strand/DFSuggestionViewController.xib
@@ -19,6 +19,13 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1u9-Mt-ejc" customClass="DFProfileWithContextView">
+                    <rect key="frame" x="15" y="485" width="570" height="35"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="35" id="Onf-j7-hrb"/>
+                    </constraints>
+                </view>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PcX-e4-LPg">
                     <rect key="frame" x="15" y="38" width="570" height="437"/>
                 </imageView>
@@ -41,13 +48,18 @@
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1u9-Mt-ejc" customClass="DFProfileWithContextView">
-                    <rect key="frame" x="15" y="485" width="570" height="35"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Assets/Icons/ForwardBarButtonIcon" translatesAutoresizingMaskIntoConstraints="NO" id="kzT-B7-63V">
+                    <rect key="frame" x="585" y="247" width="15" height="20"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="35" id="Onf-j7-hrb"/>
+                        <constraint firstAttribute="height" constant="20" id="n3U-l9-8xn"/>
                     </constraints>
-                </view>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Assets/Icons/BackBarButtonIcon" translatesAutoresizingMaskIntoConstraints="NO" id="9U5-gy-h6A">
+                    <rect key="frame" x="0.0" y="247" width="15" height="20"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="20" id="AaJ-cp-pfS"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
             <constraints>
@@ -55,15 +67,25 @@
                 <constraint firstItem="1u9-Mt-ejc" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="BYw-T5-Tfl"/>
                 <constraint firstItem="PcX-e4-LPg" firstAttribute="top" secondItem="vY5-QO-GaR" secondAttribute="bottom" constant="10" id="BrG-nw-Ibk"/>
                 <constraint firstAttribute="trailing" secondItem="PcX-e4-LPg" secondAttribute="trailing" constant="15" id="C0b-CZ-ZcI"/>
+                <constraint firstItem="PcX-e4-LPg" firstAttribute="leading" secondItem="9U5-gy-h6A" secondAttribute="trailing" id="JUa-T8-aa7"/>
                 <constraint firstItem="1u9-Mt-ejc" firstAttribute="top" secondItem="PcX-e4-LPg" secondAttribute="bottom" constant="10" id="SBu-x8-z1L"/>
                 <constraint firstItem="vY5-QO-GaR" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="10" id="WM2-fb-NIB"/>
                 <constraint firstAttribute="bottom" secondItem="Qws-Rm-gyS" secondAttribute="bottom" constant="25" id="hOq-Fr-lv2"/>
                 <constraint firstAttribute="trailing" secondItem="1u9-Mt-ejc" secondAttribute="trailing" constant="15" id="kyZ-wx-T3z"/>
+                <constraint firstItem="9U5-gy-h6A" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="myZ-J1-jsp"/>
+                <constraint firstAttribute="trailing" secondItem="kzT-B7-63V" secondAttribute="trailing" id="nbl-3F-xdA"/>
                 <constraint firstItem="PcX-e4-LPg" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="pOj-L5-fBe"/>
                 <constraint firstItem="Qws-Rm-gyS" firstAttribute="top" secondItem="1u9-Mt-ejc" secondAttribute="bottom" constant="10" id="qVa-5R-nrl"/>
+                <constraint firstItem="PcX-e4-LPg" firstAttribute="centerY" secondItem="kzT-B7-63V" secondAttribute="centerY" id="sLq-sD-h7N"/>
+                <constraint firstItem="PcX-e4-LPg" firstAttribute="centerY" secondItem="9U5-gy-h6A" secondAttribute="centerY" constant="-0.5" id="sdG-VP-cHy"/>
+                <constraint firstItem="kzT-B7-63V" firstAttribute="leading" secondItem="PcX-e4-LPg" secondAttribute="trailing" id="sjF-0o-kfk"/>
                 <constraint firstAttribute="centerX" secondItem="vY5-QO-GaR" secondAttribute="centerX" id="wsz-dC-bwO"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
         </view>
     </objects>
+    <resources>
+        <image name="Assets/Icons/BackBarButtonIcon" width="16" height="16"/>
+        <image name="Assets/Icons/ForwardBarButtonIcon" width="16" height="16"/>
+    </resources>
 </document>
